Fix Button text wrap and Flex wrap the mountains

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ h1 {
     justify-content: center;
     gap: 40px;
     padding-bottom: 60px;
+    flex-wrap: wrap;
 }
 
 .s2-card {
@@ -136,6 +137,7 @@ h1 {
     background-color: #3882F6 ;
     margin: 60px 120px;
     border-radius: 10px;
+    height:max-content;
 }
 
 .s4-text {
@@ -148,6 +150,8 @@ h1 {
 }
 
 .s4-container button {
+   display: block;
+   white-space: nowrap;
    margin: 25px 60px;
    background-color: #3882F6;
    border-color: white;
